# vuln-remediation-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: adversarial.yml  remediate.yml  scan.yml  test.yml
automation/: .gitleaks.toml  .semgrepignore  __init__.py  adversarial_generator.py  config.py  dashboard.py  issue_creator.py  models.py  orchestrator.py  scanner.py
automation/rules/: python_cmdi.yml  python_deserialization.yml  python_path_traversal.yml  python_secrets.yml  python_sqli.yml  python_weak_crypto.yml  python_xss.yml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
docs/: ARCHITECTURE.md  PLAN.md  TEST_REPORT.md
docs/workflows/: TRIGGER_SETUP.md
tests/: test_issue_creator.py  test_models.py  test_scanner.py
